<resources>

    // Application
    <string name="app_name">Scheduler</string>
    <string name="title_activity_main">Schedules</string>
    <string name="add_event">Add Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="title_activity_running_event">Running Event</string>

    // Bottom navigation
    <string name="schedule">Schedules</string>
    <string name="chats">Chats</string>


    // Hints
    <string name="schedules_first_text">Events name</string>
    <string name="schedules_second_text">Wed 18/03/20, 04:30 PM</string>
    <string name="event_name_label">Event Name</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="select_source">Select Source Location</string>
    <string name="select_destination">Select Destination Location</string>
    <string name="notification">Add Notification</string>
    <string name="completed">Completed</string>
    <string name="save">Save</string>

    // Notification Dialog
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="title">Custom Notification</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="alarm_notification">Would you like to start the event tracker?</string>
    <string name="alarm_ok_button">Yes</string>
    <string name="alarm_no_button">No</string>
    <string name="user_arrived">Arrived</string>

    // Add or Edit event
    <string name="enter_name">Please enter event name</string>
    <string name="select_date_or_time">Please select valid date and time</string>
    <string name="select_source_location">Please select source location</string>
    <string name="select_destination_location">Please select destination location</string>

    // Map
    <string name="enable_location">Please enable your location</string>

    // Geofence
    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="geofence_added">You will be notified once arrived</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <!-- Geofence Notification -->
    <string name="geofence_notification_message">You\'re arrived at the destination.</string>
    <string name="geofence_ok_button">Yes</string>
    <string name="geofence_not_button">Not yet</string>

    // Tracking Location
    <string name="location_tracking">Location tracking started</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="launch_activity">Launch</string>
    <string name="remove_location_updates">Remove location updates</string>

    // Chats
    <string name="action_chat">Scheduler Chats</string>
    <string name="current_locations">Current Locations</string>

    // Collections
    <string name="users_collection">Users</string>
    <string name="users_location_collection">User Locations</string>
    <string name="collapsing_toolbar">Collapsing Toolbar</string>
    <string name="title_activity_chat_user_locations">User Locations</string>

    // GPS requirement
    <string name="gps_requirement">This application requires GPS to work properly, do you want to enable it?</string>

    // Maps errors
    <string name="no_map_service">You cannot make map requests</string>
    <string name="event_deleted">Event deleted</string>
    <string name="event_already_running">An event is already running</string>
    <string name="minute">Minute</string>
    <string name="hour">Hour</string>
    <string name="before">before</string>
    <string name="date_set">You picked the following date:</string>
    <string name="select_event_date">Select Event date</string>
    <string name="authenticated">Authenticated</string>
    <string name="event_updated">Event updated</string>
    <string name="event_inserted">Event inserted</string>
    <string name="alarm_icon">Alarm Icon</string>
    <string name="start_tracking">Start tracking</string>
    <string name="delete_event">Delete Event</string>
    <string name="attention">Attention!</string>
    <string name="delete_question">Do you want to delete this event?</string>
    <string name="log_out">Log out</string>
    <string name="drag">Drag</string>
    <string name="remaining_times">Remaining times</string>
    <string name="not_moved">Not moved yet</string>

</resources>