<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/notification_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/title"
            android:textColor="#000"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/notification_number"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/notification_number"
            android:checkedButton="@id/notification_minutes"
            android:id="@+id/time_settings"
            android:layout_marginLeft="32dp"
            app:useMaterialThemeColors="false"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/notification_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minutes"/>
            <RadioButton
                android:id="@+id/notification_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:textSize="18sp"
            android:textColor="#33bbff"
            android:id="@+id/event_action_ok"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="20dp"
            android:textSize="18sp"
            android:textColor="#33bbff"
            android:id="@+id/event_action_cancel"/>

    </RelativeLayout>

</RelativeLayout>